# Garage

./: .gitignore  AugmenterPipeline.py  BaselineAugmenterPipeline.py  Dockerfile  GarageExample.ipynb  LICENSE  MistralModel.py  PowerPaintPipeline.py  PowerPaint_req.txt  README.md  app.py  attempts_improve_pipeline.ipynb  augment_dataset.ipynb  augmenter.py  blending_PowerPaintPipeline.py  checkpoints.sh  dataset_utils.py  example.ipynb  llava_mistral_utils.py  mistral_model.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: augmenter-checkpoint.py
Garage/: AugmenterPipeline.py
Garage/models/: LLaMAModel.py  LLaVAModel.py  PowerPaintModel.py  __init__.py
GenerativeAugmentations/: AugmenterPipeline.py  __init__.py
GenerativeAugmentations/models/: LLaVAModel.py  MistralModel.py  PowerPaintModel.py  __init__.py
GenerativeAugmentations/models/PowerPaint/: __init__.py
Padd/: GaragePaddPipeline.py  MainModel.py  PaddPipeline.py  PaddPipeline_vDaniil.py  README.md  __init__.py
Padd/models/: LLaMAModel.py  LLaVAModel.py  PowerPaintControlNet.py  PowerPaintModel.py  __init__.py
Padd/models/PhysicModel/: physic_model.py
PowerPaint/: power_paint_accelerate_entity.py
VOC2007Augs/PottedPlantAugs/Annotations/: 000001.xml  000002.xml  000003.xml  000004.xml  000005.xml  000006.xml  000007.xml  000008.xml  000009.xml  000010.xml  000011.xml  000012.xml  000013.xml  000014.xml  000015.xml  000016.xml  (+4722 more)
alphaCLIP_filter/: README.md  alphaCLIP_filter.py  preproc.sh
notebooks/: GarageExample.ipynb  augment_dataset.ipynb  paddpipeline.ipynb
scripts/: utils.py
(+14061 files in other folders)
